--- a/src/pages/docs/+Page.mdx
+++ b/src/pages/docs/+Page.mdx
@@ -24,51 +24,28 @@ This section contains documentation for users of Macrostrat's web services. This
 
 <LinkCard href="/api/v2/" title="General API Docs">
   Documentation for Macrostrat's general purpose API
+
+  <a href={"https://docs.google.com/document/d/13uLxrS0sI9qmLIERtVvegwXa6_063V5Mz82DzJ9LArw/edit"}>Macrostrat General API tutorials</a>
 </LinkCard>
 
 <LinkCard href="/api/ingest/docs" title="Ingestion API Docs">
   Documentation for Macrostrat's ingestion API
 </LinkCard>
 
+<LinkCard href="/docs/api/postgrest" title="Ingestion API Docs">
+  Documentation for General use Postgrest API
+</LinkCard>
+
+<LinkCard href={`${import.meta.env.VITE_MACROSTRAT_TILESERVER_DOMAIN}/docs`} title="Tileserver API Docs">
+  Documentation for Tileserver API
+</LinkCard>
+
+
+
 ## Administrator Documentation
 
 This section contains documentation for administrating Macrostrat's web services. This includes guides to setting up
 and maintaining Macrostrat's services.
-
-## Data products
-
-
-
-## API Documentation
-
-
-
-
-Project overviews, roadmaps and milestone reports for Macrostrat's contribution
-to the DARPA/USGS CriticalMAAS program.
-
-## Key links
-
-- [`v2.macrostrat.org`](https://v2.macrostrat.org): CriticalMAAS version of
-Macrostrat
-- [macrostrat.org](https://macrostrat.org): Macrostrat's production website
-
-## Project documents
-
-- [Project whitepaper](https://s3.macrostrat.chtc.io/web-assets/criticalmaas/media/2023-08-CriticalMAAS-UW-whitepaper.pdf)
-_(August 2023)_: A trimmed-down version of the proposal, detailing goals and
-potential deliverables.
-- [Kickoff slides](https://s3.macrostrat.chtc.io/web-assets/media/criticalmaas/media/2023-08-CriticalMAAS-kickoff-slides.pdf)
-_(August 2023)_: A brief overview of the Macrostrat platform and goals,
-presented by PI Daven Quinn at the kickoff meeting.
-- [Phase 1 research plan](https://s3.macrostrat.chtc.io/web-assets/criticalmaas/media/2023-10-CriticalMAAS-Phase-1-research-plan.pdf)
-_(October 2023)_: A detailed plan for the first phase of the project,
-including a timeline and deliverables.
-- [Milestone 2 report](https://s3.macrostrat.chtc.io/web-assets/media/criticalmaas/media/2023-12-CriticalMAAS-Milestone-2-report.pdf)
-_(December 2023)_: A report detailing the progress of the project
-
-> Compiled documents are stored in a S3 and linked to below. To download all
-> documents, run `make` in the root directory of this repository.
 
 ## Codebase
 
@@ -99,26 +76,18 @@ capabilities
 Macrostrat maintains shared libraries that underpin a variety of activities
 including CriticalMAAS.
 
-- [`UW-Macrostrat/web-components`](https://github.com/UW-Macrostrat/web-components):
-Shared React/Typescript user interface components for rich map-based user
-interfaces
-- [`UW-Macrostrat/python-libraries`](https://github.com/UW-Macrostrat/python-libraries):
-Python libraries used throughout Macrostrat server and control applications,
-including tools for database access and data processing.
+<LinkCard href={"/docs/web-components"} title="Web Components">
+  Shared React/Typescript user interface components for rich map-based user
+  interfaces
 
-### Program coordination
+  <a href={"https://github.com/UW-Macrostrat/web-components"}>Github</a>
+</LinkCard>
+<LinkCard href={"/docs/python-libraries"} title="Python Libraries">
+  Python libraries used throughout Macrostrat server and control applications,
+  including tools for database access and data processing.
 
-Schemas, data interchange libraries, and shared infrastructure for the
-CriticalMAAS program.
-
-- [`DARPA-CriticalMAAS/ta1-geopackage`](https://github.com/DARPA-CRITICALMAAS/ta1-geopackage):
-a GeoPackage-based data format for validating and storing TA1 output
-- [`DARPA-CriticalMAAS/schemas`](https://github.com/DARPA-CRITICALMAAS/schemas):
-A repository for schemas and data formats for TA1-3 integrations (_started by
-UW–Macrostrat and subsequently contributed to by all TA teams_)
-- [`UW-xDD/document-store`](https://github.com/UW-xDD/document-store): A
-supplemental store for public/user provided PDFs that provides full-text
-access, integrates with xDD APIs.
+  <a href={"https://github.com/UW-Macrostrat/python-libraries"}>Github</a>
+</LinkCard>
 
 ### Geologic metadata curation
 
@@ -157,29 +126,12 @@ if required)
 performant filtering, and visualization of massive geological point datasets
 (for **TA2** data integration)
 
-## Documentation
-
-Documentation is associated with individual project repositories. Additionally,
-some broad documentation is being coordinated across the project towards
-building a cohesive, deployable system.
-
-The [`UW-Macrostrat/docs`](https://github.com/UW-Macrostrat/docs) (_placeholder
-for future development_) repository will contain broad system documentation and
-improve discoverability and usability.
-
 ### Map interface examples
 
 The [`v2.macrostrat.org/dev`](https://v2.macrostrat.org/dev) and
 [`v2.macrostrat.org/map/dev`](https://v2.macrostrat.org/map/dev) websites
 contain examples of Macrostrat's map services for raster, vector, and
 point-based data.
-
-### API documentation
-
-- [Tileserver (v2)](https://tileserver.staging.svc.macrostrat.org/docs)
-- [Macrostrat ingestion API documentation (v2)](https://v2.macrostrat.org/api/ingest/docs)
-- [Macrostrat API documentation](https://v2.macrostrat.org/api/)
-- [Macrostrat API tutorials](https://docs.google.com/document/d/13uLxrS0sI9qmLIERtVvegwXa6_063V5Mz82DzJ9LArw/edit)
 
 ### Document extraction
 
@@ -190,64 +142,3 @@ set relative to carbonate rocks.
 - [xDD API documentation](https://xdd.wisc.edu/api/)
 - [xDD example notebook](./notebooks/xDD and COSMOS examples.ipynb): A Jupyter
 notebook demonstrating the xDD API
-
-### TODO
-
-- [ ] Build [a documentation website](https://v2.macrostrat.org/docs)
-(_placeholder for future development_)
-- [ ] Document new Macrostrat APIs using the OpenAPI specification in order to
-conform to common standards.
-- [ ] Documentation websites for
-[shared web components](https://github.com/UW-Macrostrat/web-components)
-and [Python libraries](https://github.com/UW-Macrostrat/python-libraries)
-will be established
-
-## Project Milestones
-
-### Phase 1
-
-| #   | Milestone                                                                                                                                              | Exit Criteria         | Target Date | Product |
-| --- | ------------------------------------------------------------------------------------------------------------------------------------------------------ | --------------------- | ----------- | ------- |
-| 0   | [Specifications for TA 1-3](https://github.com/DARPA-CRITICALMAAS/schemas)                                                                             | Specifiation Plans    | 09/2023     |         |
-| 1   | [Detailed research plan for Phase 1](https://s3.macrostrat.chtc.io/web-assets/media/criticalmaas/media/2023-10-CriticalMAAS-Phase-1-research-plan.pdf) | Milestone Report      | 10/2023     |         |
-| 2   | [Initial code/documentation release](https://s3.macrostrat.chtc.io/web-assets/media/criticalmaas/media/2023-12-CriticalMAAS-Milestone-2-report.pdf)    | Milestone Report/Code | 12/2023     |         |
-| 3   | [Report detailing progress of research and technology and gaps](https://github.com/UW-Macrostrat/CriticalMAAS/blob/main/milestone-reports/milestone-3/milestone-3-report.md)                                                                                          | Milestone Report      | 02/2024     |         |
-| 4   | Code/documentation/data release                                                                                                                        | Milestone Report/Code | 03/2024     |         |
-| 5   | Report detailing progress, capabilities, gaps, and final integration plans                                                                             | Milestone Report      | 04/2024     |         |
-| 6   | Report with challenge evaluation results, working code and documentation and end-to-end integration                                                    | Milestone Report/Code | 07/2024     |         |
-
-> ### Appendix: Out-of scope codebases
->
-> #### Archived repositories
->
-> These repositories are not currently being actively developed, having been
-> integrated into Macrostrat's core system at
-> [`UW-Macrostrat/macrostrat`](https://github.com/UW-Macrostrat/macrostrat)
->
-> - [`UW-Macrostrat/map-integration`](https://github.com/UW-Macrostrat/map-integration):
->   Geologic map ingestion and harmonization
-> - [`UW-Macrostrat/cli`](https://github.com/UW-Macrostrat/cli): Macrostrat
->   system management tools
-> - [`UW-Macrostrat/raster-cli`](https://github.com/UW-Macrostrat/raster-cli):
->   Prototype tool for ingesting raster datasets
->
-> #### Private repositories
->
-> - [`UW-Macrostrat/tiger-macrostrat-config`](https://github.com/UW-Macrostrat/tiger-macrostrat-config):
->   Macrostrat configuration for CHTC infrastructure. Private due to its tight
->   integration with UW–Madison CHTC systems.
-> - [`UW-Macrostrat/macrostrat-api`](https://github.com/UW-Macrostrat/macrostrat-api):
->   Macrostrat's v1-2 APIs is deprecated and contains sensitive information
->   impacting Macrostrat's production services. A simplified and
->   security-audited v3 API will be released as part of CriticalMAAS.
->
-> #### Document extraction handling
->
-> These document handling repositories are maintained as part of the
-> [xDD](https://xdd.wisc.edu/) system, and will be called on as necessary for
-> the CriticalMAAS project.
->
-> - [`UW-COSMOS/cosmos-visualizer`](https://github.com/UW-COSMOS/cosmos-visualizer):
->   Page annotation and feedback
-> - [`UW-COSMOS/COSMOS`](https://github.com/UW-COSMOS/COSMOS): PDF entity
->   extraction pipeline
