--- a/src/pages/docs/ingestion/+Page.mdx
+++ b/src/pages/docs/ingestion/+Page.mdx
@@ -9,8 +9,7 @@ import imgUrl from "../images/IngestionProcess.png"
   </span>
 </PageHeader>
 
-The Macrostrat ingestion process is built to enable the registration, processing and distribution of new maps. Depending
-on the registered maps attributes candidate maps that add value to the coalesced interface are added on expert approval.
+The Macrostrat ingestion process is built to enable the registration, processing and distribution of new maps.
 
 <img style={{maxWidth: "100%"}} src={imgUrl} />
 
@@ -42,7 +41,7 @@ processing them through the staging process outlines above. Briefly:
 2. Run `macrostrat maps run-pipeline --help` for an overview of how to
    stage a map.
 
-We are alo currently working to make the registration of a map more available via the web interface. In progress are the
+We are also currently working to make the registration of a map more available via the web interface. In progress are the
 creation of API routes that will allow a user to provide the map files directly via the ingestion interface and have the
 automated pipelines that are currently in place translate this map into a new candidate in the Macrostrat system.
 
@@ -52,7 +51,7 @@ automated pipelines that are currently in place translate this map into a new ca
 
 This process is what allows Macrostrat to present heterogenous maps in a homogenized map interface. Using the data that
 is processed into our points, lines and polygon tables in the previous step we can begin to assign them with our curated
-set of geological properties. As you go through this process Macrostrat will continuously ( In progress ) update this maps
+set of geological properties. As you go through this process Macrostrat will continuously ( in progress ) update this maps
 tiles and associated metadata APIs. This allows you to continuously improve this map as new information comes in.
 
 [How to use this interface](/docs/ingestion/harmonization)
