--- a/src/pages/docs/+Page.mdx
+++ b/src/pages/docs/+Page.mdx
@@ -76,13 +76,13 @@ capabilities
 Macrostrat maintains shared libraries that underpin a variety of activities
 including CriticalMAAS.
 
-<LinkCard href={"/docs/web-components"} title="Web Components">
+<LinkCard href={"/docs/web-components/"} title="Web Components">
   Shared React/Typescript user interface components for rich map-based user
   interfaces
 
   <a href={"https://github.com/UW-Macrostrat/web-components"}>Github</a>
 </LinkCard>
-<LinkCard href={"/docs/python-libraries"} title="Python Libraries">
+<LinkCard href={"/docs/python-libraries/"} title="Python Libraries">
   Python libraries used throughout Macrostrat server and control applications,
   including tools for database access and data processing.
 
