--- a/src/pages/docs/ingestion/harmonization/+Page.mdx
+++ b/src/pages/docs/ingestion/harmonization/+Page.mdx
@@ -29,7 +29,7 @@ representation.
 - Virtualized 'infinite' scrolling of table data to keep data downloads web friendly
 - Group based auth to prevent outside changes
 - Download the ingested map files to view metadata
-- (More incoming)
+- <a href="https://github.com/UW-Macrostrat/web/issues/new" target="_blank">Request a new feature</a>
 
 ## Process Overview
 
@@ -39,12 +39,12 @@ Log in and find the map that you wish to process on the ingestion page, clicking
 
 ### 2. Download the ingested maps metadata
 
-Click on the download link to download the metadata for the ingested map, you will need this to provide more
+Click on the `Download source` button to download the metadata for the ingested map, you will need this to provide more
 context about the values shown in the table.
 
 ### 3. Use the interface to reconcile the map
 
-Using the table interface the user manipulates the ingested data into standardized fields made easier through the above [features](#features). The table will provide feedback on the level of completion as you work and provide a link to view your processed map.
+Using the table interface the user manipulates the ingested data into standardized fields made easier through the above [features](#features).
 
 The starred columns (★) denote the columns
 that are intended to be populated by the non-star columns which are populated via the ingestion process.
@@ -65,7 +65,7 @@ This column is composed of ids for each polygon. The best way to populate this i
 
 This column is the description of the polygon.
 
-**ready**
+**omit**
 
 This column is a **True/False** column used to denote a row as "Ready". These "Ready" rows can then be removed by a column filter.
 
