--- a/src/pages/docs/ingestion/+Page.mdx
+++ b/src/pages/docs/ingestion/+Page.mdx
@@ -1,7 +1,6 @@
 export { DocumentationPage as default } from "~/layouts";
 import { LinkCard } from "~/components/cards";
 import { PageHeader } from "~/components";
-import imgUrl from "../images/IngestionProcess.png";
 
 <PageHeader title="Ingestion" showSiteName={false}>
   <span className="subtitle">
@@ -11,7 +10,7 @@ import imgUrl from "../images/IngestionProcess.png";
 
 The Macrostrat ingestion process is built to enable the registration, processing and distribution of new maps.
 
-<img style={{ maxWidth: "100%" }} src={imgUrl} />
+<img style={{ maxWidth: "100%" }} src={"https://storage.macrostrat.org/web-assets/criticalmaas/docs/images/IngestionProcess.png"} />
 
 ## Staging
 
