--- a/src/pages/dev/+Page.mdx
+++ b/src/pages/dev/+Page.mdx
@@ -1,7 +1,9 @@
 export { ContentPage as default } from "~/layouts";
 import { PageHeader } from "~/components";
+import { PageBreadcrumbs } from "~/renderer";
 
 <PageHeader title="Development pages"></PageHeader>
+<PageBreadcrumbs></PageBreadcrumbs>
 
 - [Globe](/dev/globe)
 - [Paleogeography](/dev/paleo)
