--- a/src/pages/docs/+Page.mdx
+++ b/src/pages/docs/+Page.mdx
@@ -13,18 +13,16 @@ to help **Users consume Macrostrat's data and services** and **Administrators de
 
 ## User Documentation
 
-This section contains documentation for users of Macrostrat's web services. This includes its User Interfaces, APIs, and data products.
+This section contains documentation for users of Macrostrat's web services, APIs, and data products.
 
-<LinkCard href="/docs/ingestion" title="Ingestion">
-  Documentation for ingesting data into Macrostrat
-</LinkCard>
+<LinkCard href="/docs/integrations/qgis" title="QGIS integration"></LinkCard>
 
-### User APIs
+### API documentation
 
 <LinkCard href="/api/v2/" title="General API Docs">
   Documentation for Macrostrat's general purpose API
 
-  <a href={"https://docs.google.com/document/d/13uLxrS0sI9qmLIERtVvegwXa6_063V5Mz82DzJ9LArw/edit"}>Macrostrat General API tutorials</a>
+  <a href={"https://docs.google.com/document/d/13uLxrS0sI9qmLIERtVvegwXa6_063V5Mz82DzJ9LArw/edit"}>Macrostrat API tutorials</a>
 </LinkCard>
 
 <LinkCard href="/api/ingest/docs" title="Ingestion API Docs">
@@ -42,7 +40,13 @@ This section contains documentation for users of Macrostrat's web services. This
   Documentation for Tileserver API
 </LinkCard>
 
-## Administrator Documentation
+## Contributor documentaion
+
+<LinkCard href="/docs/ingestion" title="Ingestion">
+  Documentation for ingesting data into Macrostrat
+</LinkCard>
+
+## Administrator documentation
 
 This section contains documentation for administrating Macrostrat's web services. This includes guides to setting up
 and maintaining Macrostrat's services.
