Updated docs page text

--- a/src/pages/docs/+Page.mdx
+++ b/src/pages/docs/+Page.mdx
@@ -8,7 +8,7 @@ import { LinkCard } from "~/components/cards";
   </span>
 </PageHeader>
 
-Macrostrat's goal is to provide a unified interface to view the earth's geography. The following documentation is intended
+Macrostrat seeks to provide an integrated geologic description of the Earth's crust at multiple scales. The following documentation is intended
 to help **Users consume Macrostrat's data and services** and **Administrators deploy and develop Macrostrat**.
 
 ## User Documentation
