Added dev feedback components

--- a/src/pages/dev/+Page.mdx
+++ b/src/pages/dev/+Page.mdx
@@ -8,3 +8,4 @@ import { PageBreadcrumbs } from "~/renderer";
 - [Globe](/dev/globe)
 - [Paleogeography](/dev/paleo)
 - [User interface tests](/dev/ui-tests)
+- [Feedback](/dev/feedback)
