--- a/src/pages/dev/+Page.mdx
+++ b/src/pages/dev/+Page.mdx
@@ -9,3 +9,4 @@ import { PageBreadcrumbs } from "~/renderer";
 - [Paleogeography](/dev/paleo)
 - [User interface tests](/dev/ui-tests)
 - [Feedback](/dev/feedback)
+- [Map filter](/dev/map-filter)
