--- a/src/pages/+Page.mdx
+++ b/src/pages/+Page.mdx
@@ -1,11 +1,12 @@
 export { ContentPage as default } from "~/layouts";
+import { macrostratInstance } from "@macrostrat-web/settings";
 import { PageHeader } from "~/components";
 import { LinkCard } from "~/components/cards";
 
 <PageHeader title="Macrostrat">
   <span className="subtitle">
     <span className="secondary">v2</span>{" "}
-    <span className="tertiary">{import.meta.env.VITE_MACROSTRAT_INSTANCE}</span>
+    <span className="tertiary">{macrostratInstance}</span>
   </span>
 </PageHeader>
 
