--- a/src/pages/docs/ingestion/harmonization/+Page.mdx
+++ b/src/pages/docs/ingestion/harmonization/+Page.mdx
@@ -1,11 +1,12 @@
 export { DocumentationPage as default } from "~/layouts";
 import { Icon } from "@blueprintjs/core";
+import { macrostratInstance } from "@macrostrat-web/settings";
 import { PageHeader } from "~/components";
 import { LinkCard } from "~/components/cards";
 
-<PageHeader title="Legend Harmonization" showSiteName={false}>
+<PageHeader title="Legend harmonization" showSiteName={false}>
   <span className="subtitle">
-    <span className="tertiary">{import.meta.env.VITE_MACROSTRAT_INSTANCE}</span>
+    <span className="tertiary">{macrostratInstance}</span>
   </span>
 </PageHeader>
 
