Moved detrital zircons app here

--- a/src/pages/dev/columns/+Page.mdx
+++ b/src/pages/dev/columns/+Page.mdx
@@ -10,3 +10,4 @@ We have developed a number of applications that explore the potential
 user interface design elements around digital columns.
 
 - [Carbon isotopes](/dev/columns/carbon-isotopes)
+- [Detrital zircon](/dev/columns/detrital-zircon)
