Added eODP viewer

--- a/src/pages/dev/columns/+Page.mdx
+++ b/src/pages/dev/columns/+Page.mdx
@@ -11,3 +11,5 @@ user interface design elements around digital columns.
 
 - [Carbon isotopes](/dev/columns/carbon-isotopes)
 - [Detrital zircon](/dev/columns/detrital-zircon)
+- [Ocean drilling](/dev/columns/ocean-drilling)
+- [Age model](/dev/columns/age-model)
