Finalize multiscale figure

--- a/src/pages/dev/columns/+Page.mdx
+++ b/src/pages/dev/columns/+Page.mdx
@@ -13,3 +13,4 @@ user interface design elements around digital columns.
 - [Detrital zircon](/dev/columns/detrital-zircon)
 - [Ocean drilling](/dev/columns/ocean-drilling)
 - [Age model](/dev/columns/age-model)
+- [Multiscale demo](/dev/columns/multiscale-figure)
