Made section editor compile

--- a/src/pages/dev/columns/+Page.mdx
+++ b/src/pages/dev/columns/+Page.mdx
@@ -14,3 +14,4 @@ user interface design elements around digital columns.
 - [Ocean drilling](/dev/columns/ocean-drilling)
 - [Age model](/dev/columns/age-model)
 - [Multiscale demo](/dev/columns/multiscale-figure)
+- [Column editor](/dev/columns/editor)
