--- a/src/pages/dev/+Page.mdx
+++ b/src/pages/dev/+Page.mdx
@@ -11,4 +11,4 @@ import { PageBreadcrumbs } from "~/renderer";
 - [Feedback](/dev/feedback)
 - [Map filter](/dev/filtering)
 
-- [Column concept apps](/dev/columns)
+- [Concept apps](/dev/concepts)
