Updated paleogeography maps

--- a/src/pages/dev/concepts/+Page.mdx
+++ b/src/pages/dev/concepts/+Page.mdx
@@ -3,15 +3,22 @@ import { PageBreadcrumbs } from "~/renderer";
 
 <PageBreadcrumbs></PageBreadcrumbs>
 
-# Column concept apps
+# Concept apps
 
-Macrostrat is invested in pushing stratigraphic columns into the digital age.
+## Stratigraphic columns
+
+Macrostrat is working to push stratigraphic columns into the digital age.
 We have developed a number of applications that explore the potential
-user interface design elements around digital columns.
+user interface design elements around digital stratigraphic columns.
 
-- [Carbon isotopes](/dev/columns/carbon-isotopes)
-- [Detrital zircon](/dev/columns/detrital-zircon)
-- [Ocean drilling](/dev/columns/ocean-drilling)
-- [Age model](/dev/columns/age-model)
-- [Multiscale demo](/dev/columns/multiscale-figure)
-- [Column editor](/dev/columns/editor)
+- [Carbon isotopes](/dev/concepts/carbon-isotopes)
+- [Detrital zircon](/dev/concepts/detrital-zircon)
+- [Ocean drilling](/dev/concepts/ocean-drilling)
+- [Age model](/dev/concepts/age-model)
+- [Multiscale demo](/dev/concepts/multiscale-figure)
+- [Column editor](/dev/concepts/editor)
+
+## Paleogeography
+
+- [PaleobioDB](/dev/concepts/paleogeography/pbdb)
+- [Macrostrat measurements](/dev/concepts/paleogeography/measurements)
