Removed unused concept apps

--- a/src/pages/dev/concepts/+Page.mdx
+++ b/src/pages/dev/concepts/+Page.mdx
@@ -13,8 +13,7 @@ user interface design elements around digital stratigraphic columns.
 
 - [Carbon isotopes](/dev/concepts/carbon-isotopes)
 - [Detrital zircon](/dev/concepts/detrital-zircon)
-- [Ocean drilling](/dev/concepts/ocean-drilling)
-- [Age model](/dev/concepts/age-model)
+- [Age model](/dev/concepts/eODP)
 - [Multiscale demo](/dev/concepts/multiscale-figure)
 - [Column editor](/dev/concepts/editor)
 
