test removing images

--- a/src/pages/+Page.mdx
+++ b/src/pages/+Page.mdx
@@ -2,6 +2,7 @@ export { ContentPage as default } from "~/layouts";
 import { PageHeader } from "~/components";
 import { LinkCard } from "~/components/cards";
 
+
 <PageHeader title="Macrostrat">
   <span className="subtitle">
     <span className="secondary">v2</span>{" "}
@@ -42,4 +43,8 @@ These products come from a variety of sources throughout the geosciences.
 
 <LinkCard href="/docs/" title="Documentation">
   Macrostrat documentation
+</LinkCard>
+
+<LinkCard href="/test" title="Test Site">
+  New test site @David
 </LinkCard>
